Fix hero video visibility: Remove 'display: none' on mobile and add 'playsinline' attribute

--- a/style.css
+++ b/style.css
@@ -931,11 +931,6 @@ main .sobre {
 
 @media(max-width: 992px) {
 
-    .section-div video {
-        display: none;
-        
-    }
-
     .my_service ul {
         grid-template-columns: repeat(2, 1fr);
     }
